[gd_scene load_steps=4 format=3 uid="uid://oemsvntyqd3m"]

[ext_resource type="Script" uid="uid://cxonx8fl2hcb" path="res://resolution/resolution___option_test.gd" id="1_wsdph"]
[ext_resource type="PackedScene" uid="uid://dsuaumbxcknhr" path="res://addons/godot_play_tool/helper/helper_0_0.tscn" id="2_5y1vu"]
[ext_resource type="PackedScene" uid="uid://ljh7garocuhe" path="res://addons/godot_play_tool/helper/helper_point.tscn" id="3_418bi"]

[node name="resolution___option_test" type="Node2D"]
script = ExtResource("1_wsdph")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ResolutionItemList" type="ItemList" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -257.5
offset_right = 300.0
offset_bottom = -7.5
grow_vertical = 2

[node name="ContentScaleModeItemList" type="ItemList" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 313.0
offset_top = -257.5
offset_right = 613.0
offset_bottom = -7.5
grow_vertical = 2

[node name="ContentScaleAspectItemList" type="ItemList" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 7.0
offset_right = 300.0
offset_bottom = 257.0
grow_vertical = 2

[node name="ContentScaleFactorItemList" type="ItemList" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 313.0
offset_top = 7.0
offset_right = 613.0
offset_bottom = 257.0
grow_vertical = 2

[node name="helper_0_0" parent="." instance=ExtResource("2_5y1vu")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Points" type="Node2D" parent="."]

[node name="helper_point" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(-640, 0)

[node name="helper_point2" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(-640, -360)

[node name="helper_point3" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(-640, 360)

[node name="helper_point4" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(640, 0)

[node name="helper_point5" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(640, -360)

[node name="helper_point6" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(640, 360)

[node name="helper_point7" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(0, -360)

[node name="helper_point8" parent="Points" instance=ExtResource("3_418bi")]
z_index = 4096
position = Vector2(0, 360)

[connection signal="item_selected" from="CanvasLayer/ResolutionItemList" to="." method="_on_resolution_item_list_item_selected"]
[connection signal="item_selected" from="CanvasLayer/ContentScaleModeItemList" to="." method="_on_content_scale_mode_item_list_item_selected"]
[connection signal="item_selected" from="CanvasLayer/ContentScaleAspectItemList" to="." method="_on_content_scale_aspect_item_list_item_selected"]
[connection signal="item_selected" from="CanvasLayer/ContentScaleFactorItemList" to="." method="_on_content_scale_factor_item_list_item_selected"]
